# ESP32_Terminal_HA

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/BSP/bsp_display/: CMakeLists.txt  bsp_display.c  bsp_display.h
components/BSP/bsp_ili9341/: CMakeLists.txt  bsp_ili9341.c  bsp_ili9341.h
components/BSP/bsp_ili9341/include/: bsp_ili9341.h
components/BSP/bsp_ili9488/: CMakeLists.txt
components/BSP/bsp_ili9488/include/: bsp_ili9488.h
components/BSP/bsp_ili9488/src/: bsp_ili9488.c
components/BSP/bsp_xpt2046/: CMakeLists.txt  bsp_xpt2046.h
components/BSP/bsp_xpt2046/src/: bsp_xpt2046.c
components/MiddleWares/OTA/: CMakeLists.txt  OTA.c  OTA.h
components/MiddleWares/app_wifi/: CMakeLists.txt  app_wifi.c  app_wifi.h
components/MiddleWares/common_types/: CMakeLists.txt  common_types.c  common_types.h
components/MiddleWares/ha_http_control/: CMakeLists.txt  ha_http_control.c  ha_http_control.h
components/MiddleWares/lvgl_port/: CMakeLists.txt  lvgl_port.c  lvgl_port.h
components/MiddleWares/lvgl_ui/: CMakeLists.txt
components/MiddleWares/lvgl_ui/custom/: custom.c  custom.h
components/MiddleWares/storage_manager/: CMakeLists.txt  storage_manager.c  storage_manager.h
main/: Kconfig  idf_component.yml  main.c  sys.h
